# welder

./: .gitignore  Cargo.toml  PRD.md  README.md  welder.toml
examples/basic-pack/: README.md  welder.toml
examples/basic-pack/templates/: ITCH.md.tmpl
src/: main.rs
templates/: README.md.tmpl
vhs/: welder-build-preview.tape  welder-doctor.tape  welder-package-publish.tape
